--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,25 +17,16 @@ jobs:
   
 
     steps:
-    - name: 'Set environment variable 1'
+    - name: 'Set output value'
+      id: first
       shell: bash
       run: |
         var_1="This is the value 1 in the step 1"
 
-        echo "STEPSET_VALUE_1=$var_1" >> $GITHUB_ENV
+        echo "::set-output name=first_value::$val_1"
 
-    - name: 'Set environment variable 1'
-      
+    - name: 'Check output value'
       shell: pwsh
-      
       run: |
-        $var_2 = "This is the value 2 in the step 2"
-
-        echo "STEPSET_VALUE_2=$var_2" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
-      
-    - name: Check environment variables
-      shell: bash
-      run: |
-        echo "preset value: ${{ env.PRESET_VALUE }}"
-        echo "stepset value 1: ${{ env.STEPSET_VALUE_1 }}"
-        echo "stepset value 2: ${{ env.STEPSET_VALUE_2 }}"
+        echo "${{ steps.first.outputs.first_value }}"
+     
