--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,10 +2,6 @@ name: 'SWM Github Actions Basic'
 
 on: push
 
-env:
-  PRESET_VALUE: "This is PRESET value"
-
-
 jobs:
   first_job:
     name: 'First Job'
@@ -18,6 +14,7 @@ jobs:
       shell: bash
       run: |
         var_1="This is the value 1 in the step 1"
+
         echo "::add-mask::$val_1"
         echo "::set-output name=first_value::$val_1"
 
@@ -25,4 +22,4 @@ jobs:
       shell: pwsh
       run: |
         echo "${{ steps.first.outputs.first_value }}"
-     
+        echo "${{secrets.HELLO}}"
