--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,10 +3,14 @@ name: 'SWM Github Actions Basic'
 on: push
 
 jobs:
-  first_job:
+  first-job:
     name: 'First Job'
 
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: ['ubuntu-latest','macos-latest','windows-latest ']
+
+    runs-on: ${{ matrix.os }}
 
     steps:
     - name: 'Set output value'
@@ -18,7 +22,7 @@ jobs:
         echo "::add-mask::$val_1"
         echo "::set-output name=first_value::$val_1"
 
-    - name: 'Check output value'
+    - name: 'Check output value on ${{ matrix.os }}'
       shell: pwsh
       run: |
         echo "${{ steps.first.outputs.first_value }}"
