--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,6 +9,7 @@ jobs:
     strategy:
       matrix:
         os: ['ubuntu-latest','macos-latest','windows-latest ']
+        message: ['HELLO WORLD','LOREM IPSUM']
 
     runs-on: ${{ matrix.os }}
 
@@ -17,13 +18,11 @@ jobs:
       id: first
       shell: bash
       run: |
-        var_1="This is the value 1 in the step 1"
+        var_1="This is the value: ${{ matrix.message }}"
 
-        echo "::add-mask::$val_1"
         echo "::set-output name=first_value::$val_1"
 
     - name: 'Check output value on ${{ matrix.os }}'
       shell: pwsh
       run: |
         echo "${{ steps.first.outputs.first_value }}"
-        echo "${{secrets.HELLO}}"
