--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,7 +6,7 @@ jobs:
   first-job:
     name: 'First Job'
 
-    if: github.event_name == 'pull_request'
+    if: github.event_name == 'push'
 
     strategy:
       matrix:
