--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,6 +1,14 @@
 name: 'SWM Github Actions Basic'
 
-on: ['push', 'pull_request']
+on: 
+  push:
+    branches:
+    - main
+    tags:
+    - 'v*'
+  pull_request:
+    branches:
+      - main
 
 jobs:
   first-job:
@@ -11,7 +19,6 @@ jobs:
     strategy:
       matrix:
         os: ['ubuntu-latest','macos-latest','windows-latest ']
-        message: ['HELLO WORLD','LOREM IPSUM']
 
     runs-on: ${{ matrix.os }}
 
@@ -20,11 +27,12 @@ jobs:
       id: first
       shell: bash
       run: |
-        var_1="This is the value: ${{ matrix.message }}"
+        var_1="This is the value: hello, world"
 
         echo "::set-output name=first_value::$val_1"
 
     - name: 'Check output value on ${{ matrix.os }}'
+      if: matrix.os == 'ubuntu-latest'
       shell: pwsh
       run: |
         echo "${{ steps.first.outputs.first_value }}"
