--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -37,3 +37,18 @@ jobs:
       run: |
         echo "Hello world from second job"
         
+
+  third-job:
+    name: 'Third Job'
+    
+    needs: second-job 
+    
+    runs-on: 'ubuntu-latest'
+    
+    steps:
+    - name: 'Say Hello World 3'
+      if: matrix.os == 'ubuntu-latest'
+      shell: pwsh
+      run: |
+        echo "Hello world from third job"
+        
