--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,8 +11,12 @@ jobs:
     runs-on: 'ubuntu-latest'
 
     steps:
+    - name: Checkout repository
+      uses: actions/chekout@v2
+
+
     - name: Send message to Webex Space
-      uses: /Users/sehun/PycharmPorjects/SOMA
+      uses: ./
       with:
         webexToekn: ${{ secrets.WEBEX_TOKEN }}
         webexRoomId: ${{ secrets.WEBEX_ROOM_ID }}
